crates/keron-lang/tests/corpus/errors/check/struct_field_type_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Int`, found `String`
  --> 3:27
  |
3 | val p: Point = Point { x: "zero", y: 0 }
  |                           ^^^^^^
